test: mysql genre test
Signed-off-by: fredsonchaves07 <fredson.ribeiro@objective.com.br>