@@ -1,20 +1,25 @@
 package com.fredsonchaves.config;
 
 import com.fredsonchaves.infraestructure.category.persistence.CategoryRepository;
+import com.fredsonchaves.infraestructure.genre.persistence.GenreRepository;
 import org.junit.jupiter.api.extension.BeforeEachCallback;
 import org.junit.jupiter.api.extension.ExtensionContext;
+import org.springframework.context.ApplicationContext;
 import org.springframework.data.repository.CrudRepository;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class MysqlCleanUpExtension implements BeforeEachCallback {
 
     @Override
     public void beforeEach(ExtensionContext context) {
-        final var appContext = SpringExtension.getApplicationContext(context);
-        cleanUp(Collections.singletonList(appContext.getBean(CategoryRepository.class)));
+        final ApplicationContext appContext = SpringExtension.getApplicationContext(context);
+        cleanUp(List.of(
+                appContext.getBean(GenreRepository.class),
+                appContext.getBean(CategoryRepository.class)
+        ));
     }
 
     private void cleanUp(final Collection<CrudRepository> repositories) {
